[workspace]
resolver = "2"
members = ["dshot", "exp", "imu"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Clementine Bread <soyflourbread@gmail.com>"]

[workspace.dependencies]
penguin-exp = { path = "exp" }
penguin-dshot = { path = "dshot" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-crit = { package = "cortex-m", version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

embassy-executor = { version = "0.5", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-rp = { version = "0.1", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "intrinsics", "rom-v2-intrinsics"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
pio-proc = "0.2"
pio = "0.2"

embedded-hal-async = "1.0"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

heapless = "0.8"
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"]}
fixed = "1.27.0"
fixed-macro = "1.2.0"
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "3e2b015dc477023887ae9b0e5e3adf5deb7af362" }
