[package]
edition.workspace = true
version.workspace = true
authors.workspace = true

name = "penguin-exp"
description = "who said penguins can't fly"

[dependencies]
defmt.workspace = true
defmt-rtt.workspace = true

panic-probe.workspace = true

cortex-m.workspace = true
cortex-m-rt.workspace = true

embassy-executor.workspace = true
embassy-time.workspace = true
embassy-sync.workspace = true
embassy-rp.workspace = true
pio-proc.workspace = true
pio.workspace = true
embedded-hal-async.workspace = true
embedded-io-async.workspace = true

heapless.workspace = true
bincode.workspace = true
fixed.workspace = true
fixed-macro.workspace = true
